Feat: Responsive Lyout
Add Responsividade ao lyout do site.

--- a/Crystal_Glass_Ui/assets/style/style.css
+++ b/Crystal_Glass_Ui/assets/style/style.css
@@ -187,3 +187,101 @@ header ul li a.active {
   left: 50px;
   color: #8a2435;
 }
+
+/*====================================================*/
+
+/* === RESPONSIVE ==== */
+
+@media screen and (max-width: 1200px) {
+  .container {
+    position: relative;
+    width: calc(100% - 20px);
+  }
+}
+
+@media (max-width: 992px) {
+  section {
+    padding: 50px 10px 10px;
+  }
+  .container {
+    flex-direction: column;
+    height: auto;
+    padding: 20px;
+  }
+  .container .content {
+    transform: translateX(0px);
+    max-width: 100%;
+    padding: 30px;
+    margin-top: -40px;
+  }
+  header {
+    position: relative;
+    flex-direction: column;
+    width: 100%;
+    top: -60px;
+    padding: 20px;
+    right: 0;
+    left: 0;
+  }
+  header ul {
+    margin-top: 10px;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  header ul li {
+    margin: 2px;
+  }
+  header ul li a {
+    display: inline-block;
+  }
+  .imageBox {
+    margin-bottom: 50px;
+  }
+  .content a {
+    font-size: 1em;
+    padding: 10px 20px;
+  }
+
+  @keyframes animate {
+    0%,
+    100% {
+      transform: translateY(-5px);
+    }
+    50% {
+      transform: translateY(25px);
+    }
+  }
+
+  .socialButton {
+    position: relative;
+    flex-direction: row;
+    left: 0;
+    
+  }
+  .socialButton li a {
+    margin: 0 10px;
+  }
+  .copyrightText {
+    position: relative;
+    bottom: initial;
+    left: inherit;
+    width: 100%;
+    color: #8a2435;
+    text-align: center;
+    margin-top: 20px;
+  }
+}
+
+@media (max-width: 600px) {
+  .content h2 {
+    font-size: 1.5em;
+    color: #8a2435;
+  }
+  .content p {
+    font-size: 1em;
+    color: #8a2435;
+  }
+  .imageBox img {
+    max-width: 300px;
+  }
+}
