--- a/green_registration_form/assets/css/style.css
+++ b/green_registration_form/assets/css/style.css
@@ -5,9 +5,10 @@
 /* CSS RESET*/
 
 * {
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
     
 }
 
@@ -21,8 +22,13 @@
 }
 
 body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
     background-color: var(--green-bgcolor);
-    font-family: 'Poppins', Arial, sans-serif;
+    
+    
 }
 
 /* CONTENT */
@@ -30,37 +36,23 @@ body {
 section {
     display: flex;
     justify-content: center;
-    position: relative;
-    margin: 100px 350px ;
-    width: 550px;
-    height: 650px;
-    border-radius: 30px;
+    width: 450px;
+    height: 550px;
+    border-radius: 20px;
     box-shadow: 13px 13px 5px 0px var(--shadow-color);
     background-color: var(--white-bgcolor);
-
+    
 }
-
+    
+    
 .container {
     
-    position: relative;
-    width: 500px;
-    min-height: 150px;
-    border-radius: 15px;
+    width: 310px;
     display: flex;
-    justify-content: space-around;
-    padding-top: 30px;
+    justify-content: center;
+    align-items: center;
+    padding-top: 20px;
     
-}
-
-
-.logo_image {
-    width: 230px;
-    height: 150px;
-   
-}
-
-.logo_image img {
-    width: 370px;
 }
 
 .container .close_button {
@@ -68,18 +60,14 @@ section {
     justify-content: flex-start;
     width: 20px;
     height: 17px;
-    padding-left: 50px;
+    padding-left: 10px;
+    margin-bottom: 80px;
 }
 
 .close_button img {
-    padding-left: 40px;
+    margin-left: 30px;
 }
 
 
 /* FORM CONTENT */
 
-form {
-    background-color: #2825d6;
-    height: 410px;
-    
-}
