--- a/green_registration_form/assets/css/style.css
+++ b/green_registration_form/assets/css/style.css
@@ -40,7 +40,7 @@ body {
     width: 100%;
     max-width: 430px;
     border-radius: 20px;
-    height: 650px;
+    height: 660px;
     padding: 20px;
     margin: 15px;
     box-shadow: 13px 13px 5px 0px var(--shadow-color);
@@ -112,9 +112,13 @@ form {
 }
 
 
-.button_submit {
+.button {
     display: flex;
     justify-content: center;
+    margin-top: 10px;
+}
+
+.button input {
     margin-top: 10px;
     margin-bottom: 10px;
     background-color: var(--green-bgcolor);
@@ -122,6 +126,9 @@ form {
     width: 100px;
     padding: 5px;
     border: none;
+    color: var(--white-bgcolor);
 
 }
+
+
 
