--- a/Awax_website_project/assets/css/style.css
+++ b/Awax_website_project/assets/css/style.css
@@ -21,6 +21,7 @@
         --primary-Color: #000;
         --primaryFont-color: #FFF;
         --secondary-Color: #b28756;
+        --tertiary-Color: #333;
         --hover-Color: #CCC;
 
     }
@@ -81,7 +82,7 @@
         height: 100px;
         display: flex;
         align-items: center;
-        /* prevents the menu from jumping up */
+        /* prevents the menu from jumping */
         border-bottom: 5px solid var(--primary-Color);
     }
 
@@ -100,12 +101,51 @@
     /* BANNER */
 
         .banner {
-            height: calc(100vh - 100px); /* Full Screen banner (banner height - header height) | No scroll bar */
-            background-color: red;
+            /* Full Screen banner (banner height - header height) | No scroll bar */
+            height: calc(100vh - 100px); 
+            background-color: var(--tertiary-Color);
+            background-image: url("../img/bg.jpg");
+            /* self-adjusting to fill all available space */
+            background-size:cover;
+            /* highest priority at the bottom of the image */
+            background-position:bottom;
+            /* hides all the overflow content of the slide  */
+            overflow: hidden;
+
         }
+
+        
+    /* BANNER SLIDES */
+        
+        .banner .sliders {
+            /* main slide area, groups all slides */
+            width: 1000vw;
+            height: 100%;
+            
+        }
+        .banner .slide {
+            /* Each image on the slide  */
+            width: 100vw;
+            height: 100%;
+            display: inline-block;
+            background-color: rgba(0, 0, 0, 0.8);
+        }
+        
+    /* ---------------- */
+
+
+
+
+
+
+
+
+
 
 
 /*------------------------------ */
+
+
 
 
 
