--- a/Awax_website_project/assets/css/style.css
+++ b/Awax_website_project/assets/css/style.css
@@ -168,6 +168,31 @@
 
 
         }
+
+        /* SLIDERS POINTERS */
+        .banner .sliders_pointers {
+            width: 100vw;
+            height: 20px;
+            position: absolute;
+            margin-top: -50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+        }
+        .banner .pointer {
+            width: 15px;
+            height: 15px;
+            border: 2px solid var(--secondary-Color);
+            border-radius: 8px;
+            margin-left: 5px;
+            margin-right: 5px;
+            cursor: pointer;
+
+        }
+        .banner .pointer.active {
+            background-color: var(--secondary-Color);
+        }
     /* ---------------- */
 
 
