--- a/Awax_website_project/assets/css/style.css
+++ b/Awax_website_project/assets/css/style.css
@@ -5,263 +5,273 @@
 
 /* CSS RESET  */
 
-    * {
-        box-sizing: border-box;
-        padding: 0;
-        margin: 0;
-        font-family: 'Montserrat',Arial, Helvetica, sans-serif;
-        font-size: 13px;
-    }
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+    font-size: 13px;
+}
 
 /*------------------------------ */
 
 /* VARIABLES */
 
-    :root {
-        --primary-Color: #000;
-        --secondary-Color: #b28756;
-        --primaryFont-color: #FFF;
-        --secondaryFont-Color: #999;
-        --tertiary-Color: #333;
-        --hover-Color: #CCC;
-        --filter-BgColor: #EEE;
-        --filter-FontColor: #555;
-        --backgroundLight-Color: #F7F7F7;
+:root {
+    --primary-Color: #000;
+    --secondary-Color: #b28756;
+    --primaryFont-color: #FFF;
+    --secondaryFont-Color: #999;
+    --tertiary-Color: #333;
+    --hover-Color: #CCC;
+    --filter-BgColor: #EEE;
+    --filter-FontColor: #555;
+    --backgroundLight-Color: #F7F7F7;
 
 
-    }
+}
+
 /*------------------------------ */
 
-    body {
-        overflow-x: hidden;
-    }
+body {
+    overflow-x: hidden;
+}
 
 /* HEADER CONTENT */
 
-    header {
-        height: 100px;
-        background-color: var(--primary-Color);
-        color: var(--primaryFont-color);
+header {
+    height: 100px;
+    background-color: var(--primary-Color);
+    color: var(--primaryFont-color);
 
-    }
+}
 
-    .header {
-        max-width: 1140px;
-        height: 100px;
-        margin: auto;
-        display: flex;
-        align-items: center;
-    }
-
-    .logo_area {
-        width: 100px;
-    }
-
-    .logo_img {
-        display: flex;
-        align-items: center;
-        padding: 10px 25px;
-        width: 80px;
-        height: 80px;
-        background-color: var(--secondary-Color);
-        border-radius: 40px;
-    }
-
-    .menu {
-        flex: 1;
-        display: flex;
-        justify-content: flex-end;
-
-    }
-
-    .menu ul,
-    .menu li {
-        list-style: none;
-    }
-
-    .menu ul {
+.header {
+    max-width: 1140px;
+    height: 100px;
+    margin: auto;
     display: flex;
-    }
+    align-items: center;
+}
 
-    .menu li a {
-        color: var(--primaryFont-color);
-        text-transform: uppercase;
-        font-weight: 600;
-        text-decoration: none;
-        padding: 0px 10px;
-        height: 100px;
-        display: flex;
-        align-items: center;
-        /* prevents the menu from jumping */
-        border-bottom: 5px solid var(--primary-Color);
-    }
+.logo_area {
+    width: 100px;
+}
 
-    .menu li a:hover,
-    .menu .active a {
-        border-bottom: 5px solid var(--secondary-Color);
-        color: var(--hover-Color);
-    }
+.logo_img {
+    display: flex;
+    align-items: center;
+    padding: 10px 25px;
+    width: 80px;
+    height: 80px;
+    background-color: var(--secondary-Color);
+    border-radius: 40px;
+}
+
+.menu {
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+
+}
+
+.menu ul,
+.menu li {
+    list-style: none;
+}
+
+.menu ul {
+    display: flex;
+}
+
+.menu li a {
+    color: var(--primaryFont-color);
+    text-transform: uppercase;
+    font-weight: 600;
+    text-decoration: none;
+    padding: 0px 10px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    /* prevents the menu from jumping */
+    border-bottom: 5px solid var(--primary-Color);
+}
+
+.menu li a:hover,
+.menu .active a {
+    border-bottom: 5px solid var(--secondary-Color);
+    color: var(--hover-Color);
+}
 
 /*------------------------------ */
 
 
 /* MAIN CONTENT */
-    /* BUTTON */
+/* BUTTON */
 
-    .button {
-        display: inline-block;
-        background-color: var(--secondary-Color);
-        color: var(--primaryFont-color);
-        font-size: 12px;
-        font-weight: 600;
-        text-transform: uppercase;
-        text-decoration: none;
-        padding: 10px 30px;
-        margin-top: 20px;
-        border-radius: 20px;
-
-
-    }
-    /* BANNER */
-
-        .banner {
-            /* Full Screen banner (banner height - header height) | No scroll bar */
-            height: calc(100vh - 100px); 
-            background-color: var(--tertiary-Color);
-            background-image: url("../img/bg.jpg");
-            /* self-adjusting to fill all available space */
-            background-size:cover;
-            /* highest priority at the bottom of the image */
-            background-position:bottom;
-            /* hides all the overflow content of the slide  */
-            overflow: hidden;
-
-        }
-
-        
-    /* BANNER SLIDES */
-        
-        .banner .sliders {
-            /* main slide area, groups all slides */
-            width: 1000vw;
-            height: 100%;
-            
-        }
-        .banner .slide {
-            /* Each image on the slide  */
-            width: 100vw;
-            height: 100%;
-            display: inline-block;
-            background-color: rgba(0, 0, 0, 0.8);
-        }
-        .banner .slidearea {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            height: 100%;
-            color: var(--primaryFont-color);
-
-        }
-        .banner h1 {
-            text-transform: uppercase;
-            font-weight: bold;
-            font-size: 50px;
-        }
-        .banner h1 span {
-            color: var(--secondary-Color);
-            font-size: 50px;
-        }
-        .banner h2 {
-            text-transform: uppercase;
-            font-size: 18px;
-            margin-top: 20px;
-        }
-        
-
-        /* SLIDERS POINTERS */
-        .banner .sliders_pointers {
-            width: 100vw;
-            height: 20px;
-            position: absolute;
-            margin-top: -50px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-        }
-        .banner .pointer {
-            width: 15px;
-            height: 15px;
-            border: 2px solid var(--secondary-Color);
-            border-radius: 8px;
-            margin-left: 5px;
-            margin-right: 5px;
-            cursor: pointer;
-
-        }
-        .banner .pointer.active {
-            background-color: var(--secondary-Color);
-        }
-    /* ---------------- */
+.button {
+    display: inline-block;
+    background-color: var(--secondary-Color);
+    color: var(--primaryFont-color);
+    font-size: 12px;
+    font-weight: 600;
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 10px 30px;
+    margin-top: 20px;
+    border-radius: 20px;
 
 
-    /* SECTION AFTER BANNER */
+}
 
-    .default {
-        padding-top: 50px;
-        padding-bottom: 50px;
-    }
+/* BANNER */
 
-    .default .section_title ,
-    .default .section_description {
-        text-align: center;
-        text-transform: uppercase;
-        font-weight: 600;
+.banner {
+    /* Full Screen banner (banner height - header height) | No scroll bar */
+    height: calc(100vh - 100px);
+    background-color: var(--tertiary-Color);
+    background-image: url("../img/bg.jpg");
+    /* self-adjusting to fill all available space */
+    background-size: cover;
+    /* highest priority at the bottom of the image */
+    background-position: bottom;
+    /* hides all the overflow content of the slide  */
+    overflow: hidden;
 
-    }
-
-    .default .section_title {
-        font-size: 20px;
-    
-    }
-
-    .default .section_description {
-        font-size: 12px;
-        margin-top: 10px;
-        margin-bottom: 40px;
-        color: var(--hover-Color);
-    }
-
-    .default .section_body {
-        max-width: 1140px;
-        margin: auto;
-       
-    }
+}
 
 
-    /* Section light background color  */
+/* BANNER SLIDES */
 
-    .default.light {
-        background-color: var(--backgroundLight-Color);
-    }
+.banner .sliders {
+    /* main slide area, groups all slides */
+    width: 1000vw;
+    height: 100%;
 
-    .default.light .section_title,
-    .default.light .section_body {
-        color: var(--text-Color);
-    }
+}
 
-    
-    /* section dark blackground color  */
+.banner .slide {
+    /* Each image on the slide  */
+    width: 100vw;
+    height: 100%;
+    display: inline-block;
+    background-color: rgba(0, 0, 0, 0.8);
+}
 
-    .default.dark {
-        background-color: var(--primary-Color);
-    }
+.banner .slidearea {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 100%;
+    color: var(--primaryFont-color);
 
-    .default.dark .section_title,
-    .default.dark .section_body {
-        color: var(--primaryFont-color);
-    }
+}
+
+.banner h1 {
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 50px;
+}
+
+.banner h1 span {
+    color: var(--secondary-Color);
+    font-size: 50px;
+}
+
+.banner h2 {
+    text-transform: uppercase;
+    font-size: 18px;
+    margin-top: 20px;
+}
+
+
+/* SLIDERS POINTERS */
+.banner .sliders_pointers {
+    width: 100vw;
+    height: 20px;
+    position: absolute;
+    margin-top: -50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.banner .pointer {
+    width: 15px;
+    height: 15px;
+    border: 2px solid var(--secondary-Color);
+    border-radius: 8px;
+    margin-left: 5px;
+    margin-right: 5px;
+    cursor: pointer;
+
+}
+
+.banner .pointer.active {
+    background-color: var(--secondary-Color);
+}
+
+/* ---------------- */
+
+
+/* SECTION AFTER BANNER */
+
+.default {
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.default .section_title,
+.default .section_description {
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 600;
+
+}
+
+.default .section_title {
+    font-size: 20px;
+
+}
+
+.default .section_description {
+    font-size: 12px;
+    margin-top: 10px;
+    margin-bottom: 40px;
+    color: var(--hover-Color);
+}
+
+.default .section_body {
+    max-width: 1140px;
+    margin: auto;
+
+}
+
+
+/* Section light background color  */
+
+.default.light {
+    background-color: var(--backgroundLight-Color);
+}
+
+.default.light .section_title,
+.default.light .section_body {
+    color: var(--text-Color);
+}
+
+
+/* section dark blackground color  */
+
+.default.dark {
+    background-color: var(--primary-Color);
+}
+
+.default.dark .section_title,
+.default.dark .section_body {
+    color: var(--primaryFont-color);
+}
 
 
 
@@ -275,107 +285,159 @@
 
 /* SECTION ABOUT US */
 
-    .section_about_us {
-        display: flex;
-    }
+.section_about_us {
+    display: flex;
+}
 
-    .section_about_us_left {
-        flex: 1;
-    }
+.section_about_us_left {
+    flex: 1;
+}
 
-    .section_about_us_left p {
-        font-size: 14px;
-        line-height: 25px;
-    }
+.section_about_us_left p {
+    font-size: 14px;
+    line-height: 25px;
+}
 
-    .section_about_us_right {
-        width: 520px;
-        text-align: center;
+.section_about_us_right {
+    width: 520px;
+    text-align: center;
 
-    }
+}
 
-    .section_about_us_right img {
-        width: 480px;
-        box-shadow: 0px 5px 10px var(--tertiary-Color);
-    }
+.section_about_us_right img {
+    width: 480px;
+    box-shadow: 0px 5px 10px var(--tertiary-Color);
+}
 
 /*------------------------------ */
 
 /* SECTION SERVICES  */
 
-    .section_services {
-        display: flex;
-    }
-    
-    .section_service {
-        flex: 1;
-        text-align: center;
-        border-right: 1px solid var(--tertiary-Color);
-        padding: 15px;
+.section_services {
+    display: flex;
+}
 
-    }
+.section_service {
+    flex: 1;
+    text-align: center;
+    border-right: 1px solid var(--tertiary-Color);
+    padding: 15px;
 
-    .section_service:first-child {
-        border-left: 1px solid var(--tertiary-Color);
-    }
+}
 
-    .section_service h4 {
-        margin-top: 20px;
-        text-transform: uppercase;
-        font-size: 18px;
-    }
+.section_service:first-child {
+    border-left: 1px solid var(--tertiary-Color);
+}
 
-    .section_service p {
-        margin-top: 10px;
-        font-size: 13px;
-        color: var(--secondaryFont-Color);
-    }
+.section_service h4 {
+    margin-top: 20px;
+    text-transform: uppercase;
+    font-size: 18px;
+}
+
+.section_service p {
+    margin-top: 10px;
+    font-size: 13px;
+    color: var(--secondaryFont-Color);
+}
 
 /*------------------------------ */
 
 /* SECTION PROJECTS */
 
-.section_projects {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    
-}
+    .section_projects {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
-.section_projects_filters {
-    border: 1px solid var(--hover-Color);
-    background-color: var(--filter-BgColor);
-    border-radius: 30px;
-    display: inline-block;
-    padding: 0px 20px;
-    cursor: pointer;
+    }
 
-}
+    .section_projects_filters {
+        border: 1px solid var(--hover-Color);
+        background-color: var(--filter-BgColor);
+        border-radius: 30px;
+        display: inline-block;
+        padding: 0px 20px;
+        cursor: pointer;
 
-
-.section_projects_filters ul,
-.section_projects_filters li {
-    list-style: none;
-}
+    }
 
 
-.section_projects_filters li {
-    display: inline-block;
-    padding: 10px;
-    text-transform: uppercase;
-    font-size: 13px;
-    border-left: 1px solid var(--hover-Color);
-    color: var(--filter-FontColor);
-    border-bottom: 3px solid var(--filter-BgColor);
-}
+    .section_projects_filters ul,
+    .section_projects_filters li {
+        list-style: none;
+    }
 
-.section_projects_filters li:hover,
-.section_projects_filters li.active {
-    border-bottom: 3px solid var(--secondary-Color);
-}
 
-.section_projects_filters li:first-child {
-    border-left: 0;
-}
+    .section_projects_filters li {
+        display: inline-block;
+        padding: 10px;
+        text-transform: uppercase;
+        font-size: 13px;
+        border-left: 1px solid var(--hover-Color);
+        color: var(--filter-FontColor);
+        border-bottom: 3px solid var(--filter-BgColor);
+    }
 
+    .section_projects_filters li:hover,
+    .section_projects_filters li.active {
+        border-bottom: 3px solid var(--secondary-Color);
+    }
+
+    .section_projects_filters li:first-child {
+        border-left: 0;
+    }
+
+    /* PHOTO AREA */
+
+    .section_projects_photos {
+        width: 100vw;
+        max-width: 1140px;
+        margin-top: 20px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .section_projects_photo {
+        width: 280px;
+    }
+
+    .section_projects_photo_area {
+        margin: 10px;
+        width: 260px;
+        height: 160px;
+    }
+
+    .section_projects_photo_area img {
+        width: inherit;
+        height: inherit;
+    }
+
+    .section_projects_photo_info {
+        position: absolute;
+        background-color: rgba(0, 0, 0, 0.5);
+        width: inherit;
+        height: inherit;
+        display: none;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        color: var(--primaryFont-color);
+        padding: 20px;
+
+
+    }
+
+    .section_projects_photo_info h5 {
+        font-size: 18px;
+        font-weight: 600;
+        margin-bottom: 5px;
+        text-transform: uppercase;
+    }
+
+    .section_projects_photo_area:hover .section_projects_photo_info {
+        display: flex;
+
+    }
 /*------------------------------ */
