--- a/Awax_website_project/assets/css/style.css
+++ b/Awax_website_project/assets/css/style.css
@@ -187,6 +187,7 @@ header {
 
 
 /* SLIDERS POINTERS */
+
 .banner .sliders_pointers {
     width: 100vw;
     height: 20px;
@@ -455,6 +456,69 @@ header {
     .section_team_area {
         background-color: rgba(0, 0, 0, 0.8);
         padding: 50px 0px;
+    }
+
+
+    /* OUR TEAM SLIDE AREA */
+
+    .section_team {
+        overflow: hidden;
+        max-width: 880px;
+        margin: auto;
+    }
+        
+    .section_team .sliders {
+        /* main slide area, groups all slides */
+        width: 1000vw;
+        height: 100%;
+
+    }
+
+    .section_team .slide {
+        /* Each image on the slide  */
+        width: 280px;
+        height: 100%;
+        min-height: 300px;
+        display: inline-block;
+        background-color: var(--primaryFont-color);
+        margin-right: 20px;
+    }
+
+    .section_team .slidearea {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        height: 100%;
+        color: var(--primaryFont-color);
+
+    }
+
+    /* OUR TEAM SLIDER POINTERS */
+    
+    .section_team_area .sliders_pointers {
+        
+        height: 20px;
+        margin-top: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    
+    }
+    
+    .section_team_area .pointer {
+        width: 15px;
+        height: 15px;
+        border: 2px solid var(--secondary-Color);
+        border-radius: 8px;
+        margin-left: 5px;
+        margin-right: 5px;
+        cursor: pointer;
+    
+    }
+    
+    .section_team_area .pointer.active {
+        background-color: var(--secondary-Color);
     }
 
 /*------------------------------ */
