--- a/Awax_website_project/assets/css/style.css
+++ b/Awax_website_project/assets/css/style.css
@@ -490,7 +490,8 @@ header {
         justify-content: center;
         flex-direction: column;
         height: 100%;
-        color: var(--primaryFont-color);
+        color: var(--primary-Color);
+        padding: 30px;
 
     }
 
@@ -518,6 +519,49 @@ header {
     }
     
     .section_team_area .pointer.active {
+        background-color: var(--secondary-Color);
+    }
+
+
+    .section_team_avatar {
+        width: 150px;
+        height: auto;
+
+    }
+
+    .section_team_name {
+        margin-top: 30px;
+        text-transform: uppercase;
+        font-weight: 600;
+        font-size: 17px;
+
+    }
+
+    .section_team_role {
+        font-size: 14px;        
+        margin-top: 5px;
+        color: var(--secondaryFont-Color);
+
+    }
+
+    .section_team_social {
+        display: flex;
+        margin-top: 20px;
+
+    }
+
+    .section_team_social a {
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        width: 25px;
+        height: 25px;
+        border-radius: 13px;
+        background-color: var(--secondaryFont-Color);
+        margin-right: 10px;
+    }
+
+    .section_team_social a:hover {
         background-color: var(--secondary-Color);
     }
 
